--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "lucide-react": "^0.462.0",
     "marked": "^16.4.1",
     "next-themes": "^0.3.0",
+    "papaparse": "^5.5.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -88,4 +89,3 @@
     "vite": "^5.4.19"
   }
 }
-
